Latest version of RedisEconomy on Java 8